--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -62,7 +62,7 @@ Versione: \insertversion
 %\setlength{\parindent}{18pt} %settato indentazione di default
 \section*{\LARGE Sommario:} %SEZIONE SOMMARIO
 \indent \indent
-Il presente documento descrive le strategie per la gestione della qualit\`a adottate dall'azienda WebShape, e comprende un resoconto delle relative attivit\`a effettivamente svolte.
+Il presente documento descrive le strategie per la verifica della correttezza dei documenti e del codice prodotto, adottate dall'azienda WebShape, e comprende un resoconto delle relative attivit\`a effettivamente svolte.
  
 \section*{\LARGE Stato del documento:}
 \indent \indent
