--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -217,7 +217,7 @@ Il presente documento descrive le strategie per la verifica della correttezza de
 \sezione{Introduzione}
  
 \subsezione{Scopo del documento}
-Il presente documento definisce il livello di qualit\`a atteso del prodotto e del processo di realizzazione dello stesso, indica le metodologie da adottare per assicurare la qualit\`a e riporta le attivit\`a svolte inerenti la gestione della qualit\`a.
+Il presente documento definisce il livello di qualit\`a atteso del prodotto e del processo di realizzazione dello stesso, oltre che l'aderenza del prodotto stesso a quanto descritto nel documento \textit{AnalisiDeiRequisiti} (versione 3.0), indica le metodologie da adottare per assicurare la qualit\`a e riporta le attivit\`a svolte inerenti la gestione della qualit\`a.
  
 \subsezione{Scopo del prodotto}
 Il prodotto intende permettere la realizzazione di grafica vettoriale tramite una comoda interfaccia web.
