PQ: versione NP

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -226,7 +226,7 @@ Il prodotto intende permettere la realizzazione di grafica vettoriale tramite un
 Si veda il \textit{Glossario}.
  
 \subsezione{Riferimenti normativi}
-Il presente documento \`e redatto in accordo con le norme interne di WebShape, raccolte nel documento \textit{NormeDiProgetto} consegnato assieme a questo documento, e consultabile inoltre dal repository pubblico al quale WebShape si appoggia per i suoi progetti.
+Il presente documento \`e redatto in accordo con le norme interne di WebShape, raccolte nel documento \textit{NormeDiProgetto} (versione 3.0) consegnato assieme a questo documento, e consultabile inoltre dal repository pubblico al quale WebShape si appoggia per i suoi progetti.
  
 \sezione{Visione generale della strategia di verifica}
  
