PQ: resoconto per RQ

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -374,6 +374,7 @@ Gli errori di stile trovati dal software \textit{JSLint} sono:
 \item[-] utils.js: nessun warning.
 \end{elencopuntato}
 
+\paragrafo{Resoconto} Lo stile adottato durante la programmazione \`e buono, considerati i pochi errori (1) trovati dal software \textit{JSLint}. Mettendo insieme i dati sulla copertura e sull'esito positivo dei test, si evince che i test controllano in modo adeguato la correttezza delle diverse funzionalit\`a del prodotto finora. Inoltre, tutti i requisiti obbligatori sono stati soddisfatti, quindi i risultati positivi dei test e della copertura non dipendono dal fatto che ci sia poco da controllare. Da questo segue che i test sono abbastanza completi. Il server invece \`e completamente privo di test.
 
 \subsezione{Dettaglio dell'esito delle revisioni}
  
