--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -346,6 +346,23 @@ Misura l'aderenza alle norme di codifica, ed \`e il numero di errori riportati d
 \subsezione{Dettaglio delle verifiche tramite analisi}
 \subsezione{Dettaglio delle verifiche tramite prove (test)}
 
+\subsubsezione{Descrizione dei test}
+In questa sezione vengono descritti gli obiettivi che si prefiggono i test. Vengono presentati divisi per file. Ogni file suddivide i test in sezioni.
+\paragrafo{guiTest.js}
+Controlla il funzionamento dell'interfaccia grafica.
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] Page: controlla l'identificazione del browser.
+\item[-] Canvas & Visualization: controlla le dimensioni del canvas, e la corretta instanziazione di \textit{Visualization}.
+\end{elencopuntato}
+\paragrafo{figuresTest.js}
+Controlla la gestione delle figure e delle loro propriet\`a.
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] Point: instanziazione.
+\item[-] BoundingRectangle: instanziazione, calcoli corretti da parte dei metodi, letture e scrittura degli attributi, creazione del tipo di widget corretto.
+\item[-] Colour & Opacity:
+\end{elencopuntato}
+
+
 \subsubsezione{Fase RQ}
 Vengono ora riassunti i risultati raggiunti per la fase RQ, usando le metriche precedentemente descritte.
 \paragrafo{Copertura dei test}
