--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -335,8 +335,14 @@ Compone un'istanza di \textit{Visualization}, che si occupa della sua visualizza
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=0.65]{button.jpg}
-\caption{Classi e loro relazioni - Bottoni e toolbar}
+\includegraphics[scale=0.5]{button.jpg}
+\caption{Classi e loro relazioni - Bottoni}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.5]{toolbar.jpg}
+\caption{Classi e loro relazioni - Toolbar}
 \end{figure}
 
 \subsezione{Toolbar}
@@ -782,7 +788,7 @@ Legge e modifica \textit{TextString}.
 
 %%%%%%%%Parte Dissegna
 \sezione{Specifica delle componenti - ApplicationLogic, gestione figure}
-Gestisce completamente le figure: il disegno, la conversione da e verso \underline{SVG}, le loro propriet\`a, la loro manipolazione e creazione. Utilizza le interfacce messe a disposizione dallo strato server e offre le proprie funzionalit\`a allo strato GUI. Nel grafico in figura 2 si riportano le classi per la gestione delle figure con le loro relazioni. Nel diagramma non si mostrano attributi e metodi in quanto ampiamente descritti testualmente in seguito.
+Gestisce completamente le figure: il disegno, la conversione da e verso \underline{SVG}, le loro propriet\`a, la loro manipolazione e creazione. Utilizza le interfacce messe a disposizione dallo strato server e offre le proprie funzionalit\`a allo strato GUI. Nel grafico in figura 3 si riportano le classi per la gestione delle figure con le loro relazioni. Nel diagramma non si mostrano attributi e metodi in quanto ampiamente descritti testualmente in seguito.
 
 \begin{figure}[!ht]
 \centering
