PQ: iniziato desc. saveTest

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -372,6 +372,8 @@ Controlla la gestione delle figure e delle loro propriet\`a.
 \item[-] Text: istanziazione, accesso agli attributi, modifica degli attributi.
 \end{elencopuntato}
 
+\paragrafo{saveTest.js}
+Quseti test controllano il corretto funzionamento della conversione verso SVG, creando immagini, covertendole e confrontando 
 
 \subsubsezione{Fase RQ}
 Vengono ora riassunti i risultati raggiunti per la fase RQ, usando le metriche precedentemente descritte.
