--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -366,14 +366,14 @@ In questa sezione vengono descritti gli obiettivi che si prefiggono i test. Veng
 Controlla il funzionamento dell'interfaccia grafica.
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] Page: identificazione del browser.
-\item[-] Canvas & Visualization: dimensioni del canvas, corretta instanziazione di \textit{Visualization}.
+\item[-] Canvas \& Visualization: dimensioni del canvas, corretta instanziazione di \textit{Visualization}.
 \end{elencopuntato}
 \paragrafo{figuresTest.js}
 Controlla la gestione delle figure e delle loro propriet\`a.
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] Point: instanziazione.
 \item[-] BoundingRectangle: instanziazione, calcoli corretti da parte dei metodi, letture e scrittura degli attributi, creazione del tipo di widget corretto.
-\item[-] Colour & Opacity: istanziazione, lettura e scrittura valori, conversione da e verso CSS, creazione del tipo di widget corretto.
+\item[-] Colour \& Opacity: istanziazione, lettura e scrittura valori, conversione da e verso CSS, creazione del tipo di widget corretto.
 \item[-] EdgeNumber: istanziazione, lettura e scrittura valori, creazione del tipo di widget corretto.
 \item[-] TextFont: istanziazione, lettura e scrittura valori, conversione verso CSS, creazione del tipo di widget corretto.
 \item[-] FigureSet: aggiunta, rimozione e spostamento di figure, iterazione lungo le figure. La selezione viene testata in una sezione apposita, vista la complessit\`a.
