--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -842,7 +842,7 @@ Il costruttore controlla se il browser supporta il metodo \textit{getImageData} 
 \caption{Diagramma di attivit\`a selezione figura}
 \end{figure}
 
-\item[-] \textit{fallbackSelection(where)} metodo usato quando il browser non supporta \textit{getImageData} al posto di \textit{selectFigure}. Seleziona l'ultima figura (se esiste) il cui \textit{BoundingRectangle} contiene il punto \textit{where}. Nel caso la figura sia una linea diritta viene controllato se il punto giace sulla linea. Questo metodo \`e pi\`u impreciso rispetto a \textit{selectFigure}.
+\item[-] \textit{fallbackSelection(where)} metodo usato quando il browser non supporta \textit{getImageData} al posto di \textit{selectFigure}. Seleziona l'ultima figura (se esiste) il cui \textit{BoundingRectangle} contiene il punto \textit{where}. Questo metodo \`e pi\`u impreciso rispetto a \textit{selectFigure}.
 \item[-]  \textit{each(fn)} permette di applicare una funzione ad ogni figura. Viene usato per iterare attraverso la collezione. Applica fn ad ogni elemento di \textit{{\_}figures}. 
 \item[-]  \textit{add(f)} aggiunge la figura f alla fine di \textit{{\_}figures}.
 \item[-]  \textit{rem(f)} rimuove da \textit{{\_}figures} tutte le figure identiche (ovvero aventi lo stesso indirizzo) di f.
