--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Definizione di Prodotto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -178,6 +178,12 @@ Il presente documento descrive in modo dettagliato le classi e i relativi metodi
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
+        1.3 &    19$\slash$03$\slash$2009 Ulteriori dettagli sull'implementazione dei metodi del sottosistema ApplicationLogic & Dissegna Stefano \\
+        \hline
+        1.2 &    18$\slash$03$\slash$2009 Maggiori dettagli sull'implementazione dei metodi del sottosistema ApplicationLogic & Dissegna Stefano \\
+        \hline
+        1.1 &    18$\slash$03$\slash$2009 Rifatti e descritti diagrammi di attivit\`a & Dissegna Stefano \\
+        \hline       
         1.0 &    07$\slash$03$\slash$2009 Modifica per rilascio RQ & Dissegna Stefano \\
         \hline        
         0.9 &    25$\slash$02$\slash$2009 Descrizione classi e metodi GUI & Rizzo Maurizio \\
@@ -811,11 +817,11 @@ Viene aggregata dalla classe \textit{FigureSet}.
 \item[-] \textit{getBounds()} ritorna \textit{{\_}bounds}
 \item[-] \textit{getBorderColour()} ritorna \textit{{\_}borderColour}
 \item[-]  \textit{draw(canvas)} metodo astratto per disegnare la figura sul canvas.
-\item[-]  \textit{getMainPoints} ottiene i punti della figura manipolabili dall'utente. Ritorna un array contenente copie del punto di inizio e del punto di fine del \textit{BoundingRectangle}.
-\item[-]  \textit{setSelection(value)} permette di selezionare/deselezionare la figura. Modifica \textit{{\_}selected}.
+\item[-]  \textit{getMainPoints} ottiene i punti della figura manipolabili dall'utente. Ritorna un array contenente copie del punto di inizio e del punto di fine del \textit{BoundingRectangle} ottenuti con i metodi \textit{start()} e \textit{end()}.
+\item[-]  \textit{setSelection(value)} permette di selezionare/deselezionare la figura. Setta \textit{{\_}selected} a \textit{value}.
 \item[-]  \textit{isSelected()} dice se la figura \`e correntemente selezionata. Ritorna \textit{{\_}selected}.
 \item[-]  \textit{eachProperty(fn)} applica la funzione fn ad ogni propriet\`a della figura, ovvero a \textit{{\_}bounds} e \textit{{\_}borderColour}.
-\item[-] \textit{drawSelection(canvas)} disegna dei quadratini di colore blu e con opacit\`a 0.8 intorno ai punti principali della figura, ottenuti tramite \textit{getMainPoints} e traccia i bordi del \textit{BoundingRectangle} di colore grigio con opacit\`a 0.8, solo se la figura \`e selezionata. Sia per disegnare i qudrati, si per disegnare i bordi, utilizza il metodo \textit{strokeRect} del contesto grafico.
+\item[-] \textit{drawSelection(canvas)} disegna dei quadratini di colore blu e con opacit\`a 0.8 intorno ai punti principali della figura, ottenuti tramite \textit{getMainPoints} e traccia i bordi del \textit{BoundingRectangle} di colore grigio con opacit\`a 0.8, solo se la figura \`e selezionata. Sia per disegnare i quadrati, si per disegnare i bordi, utilizza il metodo \textit{strokeRect} del contesto grafico.
 \item[-] \textit{clone()} esegue una copia profonda di se stesso utilizzando il metodo \textit{jQuery.extend()}. Sposta il \textit{BoundingRectangle} della copia di 10px verso l'alto sottraendo questo valore alle componenti y dei punti di inizio e di fine, e ritorna la copia.
 \end{elencopuntato}
 
@@ -842,10 +848,10 @@ Il costruttore controlla se il browser supporta il metodo \textit{getImageData} 
 \caption{Diagramma di attivit\`a selezione figura}
 \end{figure}
 
-\item[-] \textit{fallbackSelection(where)} metodo usato quando il browser non supporta \textit{getImageData} al posto di \textit{selectFigure}. Seleziona l'ultima figura (se esiste) il cui \textit{BoundingRectangle} contiene il punto \textit{where}. Questo metodo \`e pi\`u impreciso rispetto a \textit{selectFigure}.
+\item[-] \textit{fallbackSelection(where)} metodo usato quando il browser non supporta \textit{getImageData} al posto di \textit{selectFigure}. Seleziona l'ultima figura (se esiste) il cui \textit{BoundingRectangle} contiene il punto \textit{where}. Per farlo itera lungo l'array \textit{_figures} a partire dalla fine, e quando trova un rettangolo che racchiude il punto si ferma e ritorna la figura corrispondente. Questo metodo \`e pi\`u impreciso rispetto a \textit{selectFigure}.
 \item[-]  \textit{each(fn)} permette di applicare una funzione ad ogni figura. Viene usato per iterare attraverso la collezione. Applica fn ad ogni elemento di \textit{{\_}figures}. 
-\item[-]  \textit{add(f)} aggiunge la figura f alla fine di \textit{{\_}figures}.
-\item[-]  \textit{rem(f)} rimuove da \textit{{\_}figures} tutte le figure identiche (ovvero aventi lo stesso indirizzo) di f.
+\item[-]  \textit{add(f)} aggiunge la figura f alla fine di \textit{{\_}figures} usando il metodo \textit{push()} dell'array.
+\item[-]  \textit{rem(f)} rimuove da \textit{{\_}figures} tutte le figure identiche (ovvero aventi lo stesso indirizzo) di f. Crea un array vuoto, itera lungo \textit{{\_}figures}, e aggiunge al nuovo array la figura solo se \`e diversa da \textit{f}. Setta \textit{{\_}figures} al nuovo array.
 \item[-] \textit{toTop(f)} prende la figura f e l'aggiunge in cima a tutte le altre ponendola come ultima nell'array \textit{{\_}figures}. Se \`e gi\`a presente, la sposta. Usa il metodo \textit{rem} per togliere la figura e il metodo \textit{add} per aggiungerla in coda.
 \item[-] \textit{toBottom(f)} prende la figura f e l'aggiunge sotto tutte le altre ponendola come prima nell'array \textit{{\_}figures}. Se \`e gi\`a presente, la sposta. Usa il metodo \textit{rem} per togliere la figura e il metodo \textit{unshift} di \textit{{\_}figures} per aggiungerla in testa.
 \end{elencopuntato}
@@ -951,7 +957,7 @@ Implementa \textit{Property} e \textit{CSSProperty}. Mantiene un'istanza di \tex
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] \textit{getOpacity()} ritorna l'attributo \textit{{\_}o}.
 \item[-] \textit{set(r, g, b, o)} modifica i valori dei quattro attributi.
-\item[-] \textit{fromCSS(repr)} inizializza le componenti RGB del colore a partire dalla loro rappresentazione CSS. Divide la stringa \textit{repr} in tre parti di due cifre esadecimali l'una, le converte in numeri e le assegna alle tre componenti. Se \textit{repr} \`e invalida viene sollevata un'eccezione.
+\item[-] \textit{fromCSS(repr)} inizializza le componenti RGB del colore a partire dalla loro rappresentazione CSS. Divide la stringa \textit{repr} in tre parti di due cifre esadecimali l'una usando un'espressione regolare, le converte in numeri usando la funzione \textit{readInt} e le assegna alle tre componenti. Se \textit{repr} \`e invalida, ovvero una delle chiamata a \textit{readInt} ritorna \textit{NaN}, viene sollevata un'eccezione.
 \item[-] \textit{createWidget()} crea e ritorna un'istanza di \textit{ColourDialog} passando se stesso come parametro al costruttore.
 \item[-] \textit{toCSS()} ritorna il colore come una stringa di tipo {\#}EEEEEE formata da tre coppie di due cifre esadecimali l'una. Le coppie rappresentano rispettivamente il rosso, il verde, il blu. Per la conversione da intero a stringa esadecimale si usa il metodo \textit{toString} della classe \textit{Number}. L'opacit\`a viene ignorata da questo metodo.
 \item[-] \textit{applyToContext(context)} setta l'attributo \textit{strokeStyle} del contesto grafico alla propria rappresentazione CSS, e richiama il metodo \textit{applyToContext} su \textit{{\_}o} passando \textit{context} come argomento.
@@ -1039,8 +1045,8 @@ Ogni istanza di una classe derivante da \textit{Figure} ha uno e un solo \textit
 \`E possibile che {\_}end abbia coordinate x ed y minori delle rispettive di {\_}start. In questo caso il rettangolo racchiude una figura rovesciata.
 \paragraph{Metodi pubblici:}
 \begin{elencopuntato}[\subsubsecindent]
-\item[-] \textit{h()} ritorna l'altezza del rettangolo. Pu\`o essere negativa.
-\item[-] \textit{w()} ritorna la larghezza del rettangolo. Pu\`o essere negativa.
+\item[-] \textit{h()} ritorna l'altezza del rettangolo, calcolata come la differenza tra \textit{{\_}end.y} e \textit{{\_}start.y}. Pu\`o essere negativa.
+\item[-] \textit{w()} ritorna la larghezza del rettangolo, calcolata come la differenza tra \textit{{\_}end.x} e \textit{{\_}start.x}. Pu\`o essere negativa.
 \item[-] \textit{centre()} ritorna un \textit{Point} contenente le coordinate del centro del rettangolo.
 \item[-] \textit{applyToContext(context)} trasla le coordinate del sistema ponendo {\_}start come origine, usando il metodo \textit{translate} di \textit{context}.
 \item[-] \textit{createWidget()} crea e ritorna un'istanza di \textit{BoundingRectangleSetter} passando se stesso come parametro al costruttore.
